--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.9.1</version>
+        <scope>test</scope>
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib -->
