--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
       <version>0.20.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -110,9 +116,6 @@
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
-          <configuration>
-            <forkCount>0</forkCount>
-          </configuration>
         </plugin>
 
         <plugin>
