--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,9 +31,5 @@ jobs:
     - name: Install xvfb
       run: sudo apt-get install xvfb
       
-    - name: Build with Maven and
+    - name: Build with Maven and xvfb
       run: xvfb-run --auto-servernum mvn -B package --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
